<resources>
    <string name="app_name">AircraftWar</string>
    <string name="MediumGame">普通模式</string>
    <string name="EasyGame">简单模式</string>
    <string name="HardGame">困难模式</string>
    <string name="music">音量</string>
    <string name="login_string">登录</string>
    <string name="register_string">注册</string>
    <string name="password_string">密码</string>
    <string name="username_string">用户名</string>
    <string name="music_string">音乐</string>
    <string name="back_to_menu">返回主菜单</string>
    <string name="delete">删除</string>
    <string name="offline">单机模式</string>


</resources>